src/objects/Lcm_Log__c.object
<CustomObject>
    <description>hier werden interne Logs (z.B. aus Klassen) abgelegt</description>
    <fields>
        <fullName>Lcm_Info_1__c</fullName>
        <label>Lcm Info 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_Info_2__c</fullName>
        <label>Lcm Info 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_Info_3__c</fullName>
        <label>Lcm Info 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_Source__c</fullName>
        <label>Lcm Source</label>
        <type>TextArea</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lcm_Source__c</columns>
        <columns>Lcm_Info_1__c</columns>
        <columns>Lcm_Info_2__c</columns>
        <columns>Lcm_Info_3__c</columns>
        <columns>Lcm_Info_4__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <listViews>
        <fullName>Antizip_heute</fullName>
        <columns>NAME</columns>
        <columns>Lcm_Source__c</columns>
        <columns>Lcm_Info_1__c</columns>
        <columns>Lcm_Info_2__c</columns>
        <columns>Lcm_Info_3__c</columns>
        <columns>Lcm_Info_4__c</columns>
        <columns>Lcm_Info_5__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_Source__c</field>
            <operation>contains</operation>
            <value>Antizip</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Lcm_Info_2__c</field>
            <operation>startsWith</operation>
            <value>Rows</value>
        </filters>
        <label>Antizip heute</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>thun_heute</fullName>
        <columns>NAME</columns>
        <columns>Lcm_Source__c</columns>
        <columns>Lcm_Info_1__c</columns>
        <columns>Lcm_Info_2__c</columns>
        <columns>Lcm_Info_3__c</columns>
        <columns>Lcm_Info_4__c</columns>
        <columns>Lcm_Info_5__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>thun heute</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>Log-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>